# conductor

./: .gitignore  AGENTS.md  README.md  policy.yaml  pricing.yaml  pyproject.toml
conductor/: cli.py  context_layer.py  escalate.py  ledger.py  local.py  openai_compat.py  policy.py  proxy.py  report.py  serve.py
conductor/dashboard/: __main__.py  app.py  data.py  render.py
conductor/webui/: agents_data.py  server.py
conductor/webui/static/: agents.css  agents.js  app.js  index.html  style.css
docs/design_handoff/: Conductor GUI (design reference).dc.html  README.md
docs/plans/: real-data-spec.md  ui-design.md
outputs/: grok-web-gui-dashboard.html
tests/: test_dashboard.py  test_local_cli.py  test_web_cli.py  test_webui_agents.py  test_webui_api.py
