[project]
name = "conductor-router"
version = "0.2.0"
description = "Local LLM model router: one Anthropic-compatible endpoint, policy-based routing, SQLite ledger, auto-escalation, live terminal dashboard."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "David Lifschitz" }]
keywords = ["llm", "router", "proxy", "anthropic", "openai", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.7",
]

[project.scripts]
conductor-proxy = "conductor.serve:main"
conductor-dashboard = "conductor.dashboard.__main__:main"
conductor-report = "conductor.report:main"

[project.urls]
Repository = "https://github.com/davidlifschitz/conductor"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["conductor"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
